# valet

./: .gitignore  Makefile  README.adoc  alembic.ini  pyproject.toml
config/: app-mainfest.yaml  config.toml
docs/: development.adoc  manual.adoc  slack.adoc
instance/: slack-config.toml
migrations/versions/: d26fafd3a01b_seed_sample_data.py  ec5ddda825ce_create_schema.py
requirements/: devel.txt  prod.txt
scripts/: bot  ingress  job  run
scripts/sql/: queries.sql
static/caddy/: Caddyfile  index.html  index.js  servers.html  time.html
tests/: test_lottery.py  test_valet.py
valet/: app.py  const.py  database.py  date.py  db.py  encoder.py  job.py  json.py  logging.py  lottery.py  settings.py  types_.py  views.py
valet/bot/: app.py  listeners.py  main.py  queries.py  routes.py  views.py
valet/job/: __main__.py  job.py  lottery.py  queries.py  slack.py
valet/lib/: date.py
valet/modules/bot/: app.py  listeners.py  middleware.py  queries.py  routes.py  templates.py  views.py
valet/modules/bot/static/: home_tab.json
valet/modules/job/: __main__.py  job.py  lottery.py  queries.py  slack.py
valet/modules/web/: app.py  queries.py  views.py
valet/web/: app.py  views.py
